--- a/module_call.ipynb
+++ b/module_call.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module HighDimMM.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "include(\"HighDimMixedModels.jl\")\n",
     "import .HighDimMM   #https://docs.julialang.org/en/v1/manual/variables-and-scoping/"
@@ -54,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +87,7 @@
        "   9 │ 0.05079        9  0.481531  f       0.380933"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,6 +98,123 @@
     "f = @formula(y ~  a + b + c + d)\n",
     "contrasts = Dict( :a => ContinuousTerm, :b=>ContinuousTerm, :c => CategoricalTerm)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"data-frame\"><thead><tr><th></th><th>herd</th><th>period</th><th>incid</th><th>hsz</th></tr><tr><th></th><th>String</th><th>Float64</th><th>Int8</th><th>Int8</th></tr></thead><tbody><p>5 rows × 4 columns</p><tr><th>1</th><td>H01</td><td>1.0</td><td>2</td><td>14</td></tr><tr><th>2</th><td>H01</td><td>2.0</td><td>3</td><td>12</td></tr><tr><th>3</th><td>H01</td><td>3.0</td><td>4</td><td>9</td></tr><tr><th>4</th><td>H01</td><td>4.0</td><td>0</td><td>5</td></tr><tr><th>5</th><td>H02</td><td>1.0</td><td>3</td><td>22</td></tr></tbody></table>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|cccc}\n",
+       "\t& herd & period & incid & hsz\\\\\n",
+       "\t\\hline\n",
+       "\t& String & Float64 & Int8 & Int8\\\\\n",
+       "\t\\hline\n",
+       "\t1 & H01 & 1.0 & 2 & 14 \\\\\n",
+       "\t2 & H01 & 2.0 & 3 & 12 \\\\\n",
+       "\t3 & H01 & 3.0 & 4 & 9 \\\\\n",
+       "\t4 & H01 & 4.0 & 0 & 5 \\\\\n",
+       "\t5 & H02 & 1.0 & 3 & 22 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m5×4 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m herd   \u001b[0m\u001b[1m period  \u001b[0m\u001b[1m incid \u001b[0m\u001b[1m hsz  \u001b[0m\n",
+       "\u001b[1m     \u001b[0m│\u001b[90m String \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Int8  \u001b[0m\u001b[90m Int8 \u001b[0m\n",
+       "─────┼──────────────────────────────\n",
+       "   1 │ H01         1.0      2    14\n",
+       "   2 │ H01         2.0      3    12\n",
+       "   3 │ H01         3.0      4     9\n",
+       "   4 │ H01         4.0      0     5\n",
+       "   5 │ H02         1.0      3    22"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#MixedModels.datasets()\n",
+    "df = DataFrame(MixedModels.dataset(:cbpp))\n",
+    "df[!,:period] = map(x->parse(Float64,x),df[:,:period])\n",
+    "first(df,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"data-frame\"><thead><tr><th></th><th>period</th><th>herd</th><th>incid</th><th>hsz</th></tr><tr><th></th><th>Float64</th><th>String</th><th>Int8</th><th>Int8</th></tr></thead><tbody><p>5 rows × 4 columns</p><tr><th>1</th><td>1.0</td><td>H01</td><td>2</td><td>14</td></tr><tr><th>2</th><td>2.0</td><td>H01</td><td>3</td><td>12</td></tr><tr><th>3</th><td>3.0</td><td>H01</td><td>4</td><td>9</td></tr><tr><th>4</th><td>4.0</td><td>H01</td><td>0</td><td>5</td></tr><tr><th>5</th><td>1.0</td><td>H02</td><td>3</td><td>22</td></tr></tbody></table>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|cccc}\n",
+       "\t& period & herd & incid & hsz\\\\\n",
+       "\t\\hline\n",
+       "\t& Float64 & String & Int8 & Int8\\\\\n",
+       "\t\\hline\n",
+       "\t1 & 1.0 & H01 & 2 & 14 \\\\\n",
+       "\t2 & 2.0 & H01 & 3 & 12 \\\\\n",
+       "\t3 & 3.0 & H01 & 4 & 9 \\\\\n",
+       "\t4 & 4.0 & H01 & 0 & 5 \\\\\n",
+       "\t5 & 1.0 & H02 & 3 & 22 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m5×4 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m period  \u001b[0m\u001b[1m herd   \u001b[0m\u001b[1m incid \u001b[0m\u001b[1m hsz  \u001b[0m\n",
+       "\u001b[1m     \u001b[0m│\u001b[90m Float64 \u001b[0m\u001b[90m String \u001b[0m\u001b[90m Int8  \u001b[0m\u001b[90m Int8 \u001b[0m\n",
+       "─────┼──────────────────────────────\n",
+       "   1 │     1.0  H01         2    14\n",
+       "   2 │     2.0  H01         3    12\n",
+       "   3 │     3.0  H01         4     9\n",
+       "   4 │     4.0  H01         0     5\n",
+       "   5 │     1.0  H02         3    22"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "select!(df,[:period,:herd,:incid,:hsz])\n",
+    "first(df,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Symbol, UnionAll} with 3 entries:\n",
+       "  :hsz   => ContinuousTerm\n",
+       "  :herd  => CategoricalTerm\n",
+       "  :incid => ContinuousTerm"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = @formula(period ~ herd + incid + hsz)\n",
+    "contrasts = Dict( :incid => ContinuousTerm, :hsz => ContinuousTerm, :herd => CategoricalTerm)\n",
+    "#fit(MixedModel, @formula(period ~ incid + hsz +(1|herd)), df, REML = true)"
    ]
   },
   {
@@ -124,28 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: n >= p in high dimensional matrix\n",
-      "└ @ Main.HighDimMM /Users/zyxu/Documents/julia/highDimMM/bricks.jl:12\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Main.HighDimMM.highDimMixedModel{Float64}(y ~ a + b + c + d, Main.HighDimMM.highDimMat{Float64, Matrix{Float64}}([0.236781883208121; 0.9437409715735081; … ; 0.617492416565387; 0.48153065407402607]), Main.HighDimMM.XMat{Float64, Matrix{Float64}}([1.0 0.0; 2.0 1.0; … ; 8.0 1.0; 9.0 0.0]), [0.0 0.7522231521093703; 0.0 0.31481548090434086; … ; 0.0 0.45458919106592477; 1.0 0.38093255230858825], [0.5851946422124186, 0.07733793456911231, 0.7166282400543453, 0.3203570514066232, 0.6530930076222579, 0.2366391513734556, 0.7096838914472361, 0.5577872440804086, 0.05079002172175784])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "HMM = HighDimMM.highDimMixedModel(f, df, contrasts, 1, 1)"
    ]
@@ -159,28 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: n >= p in high dimensional matrix\n",
-      "└ @ Main.HighDimMM /Users/zyxu/Documents/julia/highDimMM/bricks.jl:12\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Main.HighDimMM.highDimMixedModel{Float64}(y ~ a + b + c + d, Main.HighDimMM.highDimMat{Float64, Matrix{Float64}}([1.0; 2.0; … ; 8.0; 9.0]), Main.HighDimMM.XMat{Float64, Matrix{Float64}}([0.236781883208121 0.7522231521093703; 0.9437409715735081 0.31481548090434086; … ; 0.617492416565387 0.45458919106592477; 0.48153065407402607 0.38093255230858825]), [0.0 0.0; 1.0 0.0; … ; 1.0 0.0; 0.0 1.0], [0.5851946422124186, 0.07733793456911231, 0.7166282400543453, 0.3203570514066232, 0.6530930076222579, 0.2366391513734556, 0.7096838914472361, 0.5577872440804086, 0.05079002172175784])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "HMM = HighDimMM.highDimMixedModel(f, df, contrasts, 1, [2,4],3)"
    ]
@@ -189,12 +260,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.variable names indicates M,X,Z"
+    "#### 3.variable names indicates M,X,Z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -208,17 +279,134 @@
     {
      "data": {
       "text/plain": [
-       "Main.HighDimMM.highDimMixedModel{Float64}(y ~ a + b + c + d, Main.HighDimMM.highDimMat{Float64, Matrix{Float64}}([1.0; 2.0; … ; 8.0; 9.0]), Main.HighDimMM.XMat{Float64, Matrix{Float64}}([0.236781883208121 0.7522231521093703; 0.9437409715735081 0.31481548090434086; … ; 0.617492416565387 0.45458919106592477; 0.48153065407402607 0.38093255230858825]), [0.0 0.0; 1.0 0.0; … ; 1.0 0.0; 0.0 1.0], [0.5851946422124186, 0.07733793456911231, 0.7166282400543453, 0.3203570514066232, 0.6530930076222579, 0.2366391513734556, 0.7096838914472361, 0.5577872440804086, 0.05079002172175784])"
+       "Main.HighDimMM.highDimMixedModel{Float64}(period ~ herd + incid + hsz, Main.HighDimMM.highDimMat{Float64, Matrix{Float64}}([2.0; 3.0; … ; 1.0; 0.0]), Main.HighDimMM.XMat{Float64, Matrix{Float64}}([14.0; 12.0; … ; 15.0; 15.0]), [0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 1.0; 0.0 0.0 … 0.0 1.0], [1.0, 2.0, 3.0, 4.0, 1.0, 2.0, 3.0, 1.0, 2.0, 3.0  …  3.0, 4.0, 1.0, 2.0, 3.0, 4.0, 1.0, 2.0, 3.0, 4.0])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "HMM = HighDimMM.highDimMixedModel(f, df, contrasts, \"a\", [\"b\",\"d\"],\"c\")"
+    "#HMM = HighDimMM.highDimMixedModel(f, df, contrasts, \"a\", [\"b\",\"d\"],\"c\")\n",
+    "HMM = HighDimMM.highDimMixedModel(f, df, contrasts, \"incid\", \"hsz\",\"herd\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " 2.0\n",
+       " 3.0\n",
+       " 4.0\n",
+       " 0.0\n",
+       " 3.0"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first(HMM.M.M,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " 14.0\n",
+       " 12.0\n",
+       "  9.0\n",
+       "  5.0\n",
+       " 22.0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first(HMM.X.X,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(56, 14)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "size(HMM.Z.Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "y, pred = modelcols(form, df);\n",
+    "terms = form.rhs.terms\n",
+    "M = highDimMat(modelmatrix(terms[idOfHDM],df))\n",
+    "X = XMat(modelmatrix(terms[idOfXMat],df))\n",
+    "\n",
+    "#preTerms = Vector(1:length(form.rhs.terms))\n",
+    "#idOfReMat = preTerms[preTerms .∉ Ref(vcat(idOfHDM, idOfXmat))]\n",
+    "Z = ReMat(modelmatrix(terms[idOfReMat],df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -273,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -281,38 +469,38 @@
      "output_type": "stream",
      "text": [
       "OPTBL: starting point [2, 2]\n",
-      "got -39.83898 at [188229.14752, 496891.01255] after 265679 iterations (returned FORCED_STOP)\n"
+      "got -59.50728 at [1.74096, 4.54947] after 21 iterations (returned XTOL_REACHED)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "([188229.14751929764, 496891.0125509644], [0.01727688920494593, -0.2990299131352748, 0.871836712849253])"
+       "([1.7409605161664736, 4.549470851735325], [-0.2687180171748196, 0.14439723933741055])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sigma, beta = HighDimMM.fit!(HMM, verbose = true, REML = true, alg = :LN_COBYLA)"
+    "sigma, beta = HighDimMM.fit!(HMM, verbose = true, REML = true, alg = :LN_BOBYQA) # :LN_BOBYQA :LN_COBYLA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       " 188229.14751929764\n",
-       " 496891.0125509644"
+       " 1.7409605161664736\n",
+       " 4.549470851735325"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,19 +521,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3-element Vector{Float64}:\n",
-       "  0.01727688920494593\n",
-       " -0.2990299131352748\n",
-       "  0.871836712849253"
+       "2-element Vector{Float64}:\n",
+       " -0.2687180171748196\n",
+       "  0.14439723933741055"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,6 +540,76 @@
    "source": [
     "beta"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
